--- a/localR.html
+++ b/localR.html
@@ -1,2 +1,2 @@
 <p> Adding html to local Repo (feature1 only)</p>
-<p>checking for push request</p>
+<p>checking for push request (add dropdown)</p>
